Use latest parent Added profile for testing as proper module Added GitHub action